backface-visibility issues in chrome so removed transistion effects on click card event to show card immediately on click using z index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,7 @@ a:not([href]) {
 
 .gamebox {
     display: none;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
+    
 }
 
 .game-info-container {
@@ -145,7 +144,7 @@ a:not([href]) {
 .card-row {
     margin-left: 20px;
     margin-right: 20px;
-    justify-content: center;
+    justify-content: center;    
     
 }
 
@@ -154,27 +153,39 @@ a:not([href]) {
   width: 125px;
   margin: 5px;
   position: relative;
-
+  
 }
 
-.card.flipped {
-    transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
+.card.flipped .card-front{
+    z-index: 10;
+    
 }
 
-.card-front,
-.card-back  {
+.card-back,
+.card-front {
     position: absolute;
     width: 100%;
     height: 100%;
-    /*backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;*/
+    -webkit-backface-visibility:hidden;
+    -moz-backface-visibility:hidden;
+    -ms-backface-visibility:hidden;
+    -o-backface-visibility:hidden;
+    backface-visibility:hidden;
+    
+    
+}
+
+.card-back {
+    z-index: 1;
 }
 
 .card-front {
-    transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-
+    -webkit-transform:rotateY(0deg);
+    -moz-transform:rotateY(0deg);
+    -ms-transform:rotateY(0deg);
+    -o-transform:rotateY(0deg);
+    transform:rotateY(0deg);
+    
 }
 
 /*.card-back:hover {
